src/app/modules/modals/concert-colors/concert-colors-modal.component.ng.scss
@import 'defaults.scss';

:host {
  display: contents;
}

.m-concertColors__header {
  padding: 0 40px;
  height: 150px;
  display: flex;
  align-items: center;
  background-size: cover;
  background-image: url('../../../../assets/photos/concert-color.png');
}

.m-concertColorsHeader__title {
  font-size: 26px;
  font-weight: 700;
  color: #ffffff;
}

.m-modalV2__inner {
  max-width: calc(100% - 80px);
  margin: 20px auto;

  @media screen and (max-width: $max-mobile) {
    max-width: calc(100% - 20px);
  }
}

