(fix): earn modal too wide

--- a/src/app/modules/modals/concert-colors/concert-colors-modal.component.ng.scss
+++ b/src/app/modules/modals/concert-colors/concert-colors-modal.component.ng.scss
@@ -1,4 +1,5 @@
 @import 'defaults.scss';
+@import '../../../common/layout/layout.scss';
 
 :host {
   display: contents;
@@ -20,8 +21,8 @@
 }
 
 .m-modalV2__inner {
-  max-width: calc(100% - 80px);
-  margin: 20px auto;
+  max-width: $layoutMax2ColWidth;
+  margin: 20px 20px;
 
   @media screen and (max-width: $max-mobile) {
     max-width: calc(100% - 20px);
